<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/world"
            android:title="@string/world" />

        <item
            android:id="@+id/sport"
            android:title="@string/sport" />

        <item
            android:id="@+id/football"
            android:title="@string/football" />

        <item
            android:id="@+id/culture"
            android:title="@string/culture" />

        <item
            android:id="@+id/business"
            android:title="@string/business" />

        <item
            android:id="@+id/fashion"
            android:title="@string/fashion" />

        <item
            android:id="@+id/technology"
            android:title="@string/technology" />

        <item
            android:id="@+id/travel"
            android:title="@string/travel" />

        <item
            android:id="@+id/money"
            android:title="@string/money" />

        <item
            android:id="@+id/science"
            android:title="@string/science" />

        <item
            android:id="@+id/environment"
            android:title="@string/environment" />
    </group>
</menu>